# beacondb

./: .env.example  .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  REUSE.toml  config.example.toml  flake.nix  optout.txt  production.nix
.reuse/: dep5
.sqlx/: query-02e036a9f03f2cff84d67480398d052cd016523f9d88320725aaf0163f88b9ff.json  query-04141d478600bf63ba7a2718f68a703cad4c8f95d7f55aa7063df868eef8f49d.json  query-0f2ad4dc4504c0c58037909714338128b2da75f771c2c7239afb9f446098ceaf.json  query-0fef386c739d5b12b6c76be80e070bea152c8da838e3f88656ce389b9984e347.json  query-1051d9566c38dd21c026eb29238cde5d876761b7da943e4008604f3133e61ab5.json  query-255d08026a187c952d1adca50a1b345ca9e9c68c8fbf338c6055dc8806c11d0b.json  query-2c8e8cba6319144986d074b14ebf9bb9de69b59be2028628d65fc090c5e3a293.json  query-31cf95f87ade8bdc69b35c5fd3512cd9e1177511ddbc63105460fe51a7c358c3.json  query-345a16497e3610eb5922431a9756b71e3e8a219b5b65bc08e24828e9c56ef0b8.json  query-36974f329ecc0f3addacc21a4809f1e3de53cb5faf59a3a16d41dc99c7de6aa8.json  query-42539ae5a5978f19821222a26871699014c611f380b5cd4cbf84af9f7c30d770.json  query-4793dd7a82dae7ee63a3fa3b279060d1ca1ae5729407dbb74e9033a74b8a1aa0.json  query-4fa9142312f2a84ac44260cbecede349fb55568cce645a8cad352ffa56b04728.json  query-541320654c624230d17a9801a284e995b9ecd4f7254b8d743ff6b605186b860b.json  query-5da5963b0ecb09401cacd118a5693bec369f17599e53e5ec7c800d5a5f817076.json  query-6102cb34ca76c18299d179f495be24340095e7f4d159b0407cf9095580ad4cd9.json  query-6285b34df70a888c39d3b53496cc9feb11b2622f2b979b14198a115d788310ea.json  query-64a6ff33d03ee8390f458ab02a3874d1a6c64efb3c06eafbac2b07ce55abcc4f.json  query-6a45bcd86b60f6d9b55fcbf0ebfbf152456bec7ba158b68307090add3198d57c.json  query-7385b57f7047b4dfa84f22be7917b24c4d10cbca72581d90fc52cbc95cbb815b.json  query-746f4baa7f963c3b2f7bf31f8217492a62a72d56f397c230a97a6678134fac28.json  query-7e0579fa8194907e543cdc99d1642a9e3dbb51313ad2778ea9ff919ac4419832.json  query-7e8830254807d66c74592d79595543b5c27380518aadc0a9bdd1b4ea2dbfe627.json  query-83b7353d7611d0f003ccfa6ae367709ae0b6f722c77ac6e9288d2f8afe7f8045.json  query-87769b3ae2160883bae04ea033baf0aa2efec8b3d860808da6b817e80537d89f.json  query-a0590af3bb728fe77e3fdc3d0415a950e574cf0f4874c2cd575261e0c5df52cd.json  query-a17409462c262d6b140b88a8ffff40ef79405ca1c285ab5d861878aa053266b7.json  query-a217dbce3b15480161442ed48f48b70ea7b1d5102f096eff27440d12e7ccb534.json  query-a7b38ed790b1df8ff22381d55ed6c47638ad992c7a81ae4f174fd8b213372074.json  query-aaf389b2b33691dd16c068d84cd37852841e1f43c3f4f184ac249cd26aa9f38b.json  query-adf3a0b7a39bae6d6dec66b76de17e18562810a651abbb0715b404413ec5ddb2.json  query-b7f806689397f12daf78b700ba837aa3c30949a896395dad5f6c5b010be38de3.json  query-c070fa702353efaf53446b9b3855ee254d5b7f6a2ae86164f411801eb21c48c7.json  query-c9df5e56d883e4ff02f22b5106f4b6e9f452d1def86bd0081a3d254da03944d7.json  query-cb5b644097ef5f953ee9820fe179622bd576ea274dd578d5c0eef231c051f990.json  query-d17ac36f99d5ba70ef0bf5f81b52a415fdbef49cecd3291b7fe78438fa748586.json  query-d1e2eb041fbef3477c2b027a5496b62ce99e9cf5edbb368decb57ed561951e41.json  query-d2ee74d2d152db4297ab8cf8c264a19af1017674d97535b1c4c54ef902f9c6e0.json  query-d7bb9748679f0aec6016cd17b0a4707b617c4d1d98393e3fa01a12df7f3f1750.json  query-dad46ec7eb50d2db3dc5edf58f94f759ae2a3a998efb9f507ed4e2d5f5883848.json  (+10 more)
analysis/: optout.txt
api/: .env.example  Cargo.toml
bcap/: Cargo.toml
beacondb/: .env.example  Cargo.toml  db-internal.sql  db.sql  production.nix  production.toml
beacondb-api/: .env  .env.example  Cargo.toml
beacondb-api/.sqlx/: query-fd6efa0eb1725d36402398bf967edb21105483ff6ae07089cf028b13c472317a.json
beacondb-api/src/: bounds.rs  cells.rs  geolocate.rs  geosubmit.rs  main.rs
beacondb/.sqlx/: query-58c32c9efd6cc2d127f6d0ca85a95d0d2886d949e708eb003794a3108c4f9fc6.json  query-ec55e6bc764ee75e1ff34438d9f15bf8ccfc36bec7f43b656eb2f01ec24f80af.json
beacondb/migrations/: 20240628050907_init.sql  20240722060151_cell_area_u24.sql  20240722063554_nr_cell_id_u36.sql
beacondb/src/: bounds.rs  config.rs  geolocate.rs  geosubmit.rs  main.rs  map.rs  mls.rs  model.rs  process.rs  sync.rs
beacondb/src/submission/: geosubmit.rs  mod.rs  report.rs
bsub/: Cargo.toml
db/: Cargo.toml  db-internal.sql  db-public.sql
(+79 files in other folders)
