[package]
name = "beacondb"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.6.0"
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3.0"
dotenvy = "0.15.7"
futures = "0.3.30"
geo = "0.29.2"
geo-types = "0.7.14"
geojson = { version = "0.24.1", features = ["geo-types"] }
h3o = { version = "0.7.0", features = ["geo"] }
ipnetwork = "0.20.0"
mac_address = { version = "1.1.7", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sqlx = { version = "0.7.4", features = ["chrono", "postgres", "runtime-tokio", "macros", "mac_address", "ipnetwork"] }
strum = { version = "0.26.3", features = ["derive"] }
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
toml = "0.8.14"

[lints.rust]
unsafe_code = "forbid"
