[package]
name = "beacondb"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
actix-web = "4.11.0"
anyhow = "1.0.100"
approx = "0.5.1"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.51", features = ["derive"] }
csv = "1.4.0"
dotenvy = "0.15.7"
futures = "0.3.31"
geo = "0.31.0"
geo-types = "0.7.17"
geojson = { version = "0.24.2", features = ["geo-types"] }
h3o = { version = "0.9.3", features = ["geo"] }
ipnetwork = "0.20.0"
mac_address = { version = "1.1.8", features = ["serde"] }
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["chrono", "postgres", "runtime-tokio", "macros", "mac_address", "ipnetwork"] }
strum = { version = "0.27.2", features = ["derive"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
toml = "0.9.8"

[lints.rust]
unsafe_code = "forbid"
