[package]
name = "beacondb-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.6.0"
anyhow = "1.0.86"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3.0"
dotenvy = "0.15.7"
geo = { version = "0.28.0", features = ["use-serde"] }
mac_address = { version = "1.1.6", features = ["serde"] }
maud = { version = "0.26.0", features = ["actix-web"] }
serde = { version = "1.0.202", features = ["derive"] }
sqlx = { git = "https://github.com/launchbadge/sqlx.git", rev = "352b02de6af70f1ff1bfbd15329120589a0f7337", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.37.0", features = ["full"] }

libbeacondb = { path = "../libbeacondb" }
