[package]
name = "beacondb"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.6.0"
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3.0"
dotenvy = "0.15.7"
geo = "0.28.0"
mac_address = { version = "1.1.7", features = ["serde"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sqlx = { git = "https://github.com/launchbadge/sqlx.git", rev = "352b02de6af70f1ff1bfbd15329120589a0f7337", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.38.0", features = ["full"] }

libbeacondb = { path = "../libbeacondb" }
